Ingress/Example-1/Httpd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-deploy
  template:
    metadata:
      labels:
        app: httpd-deploy
    spec:
      containers:
      - name: ingress-httpd-deploy
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  type: ClusterIP
  selector:
    app: httpd-deploy
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
